objects/User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Story - Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_A__c</fullName>
        <label>As A</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Project__c</fullName>
        <label>Assigned Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>July SOW</fullName>
                    <default>true</default>
                    <label>July SOW</label>
                </value>
                <value>
                    <fullName>FUTURE</fullName>
                </value>
                <value>
                    <fullName>To Be Determined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Sprint__c</fullName>
        <label>Assigned Sprint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint 0</fullName>
                </value>
                <value>
                    <fullName>Sprint 1</fullName>
                </value>
                <value>
                    <fullName>Sprint 2</fullName>
                </value>
                <value>
                    <fullName>Sprint 3</fullName>
                </value>
                <value>
                    <fullName>Sprint 4</fullName>
                </value>
                <value>
                    <fullName>Sprint 5</fullName>
                </value>
                <value>
                    <fullName>Sprint 6</fullName>
                </value>
                <value>
                    <fullName>Sprint 7</fullName>
                </value>
                <value>
                    <fullName>Sprint unknown</fullName>
                </value>
                <value>
                    <fullName>Waiting To Be Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Burned__c</fullName>
        <label>Burned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field designates if the business stakeholders requesting the change have budget or not.</inlineHelpText>
        <label>Business has Budget?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Details__c</fullName>
        <label>Design/Solution Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Assigned Developer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mark Cowles</fullName>
                </value>
                <value>
                    <fullName>Raj Vooturi</fullName>
                </value>
                <value>
                    <fullName>Suraj Aluru</fullName>
                </value>
                <value>
                    <fullName>Kaavya Karanam</fullName>
                </value>
                <value>
                    <fullName>Raj Damera</fullName>
                </value>
                <value>
                    <fullName>Jeff Kurth</fullName>
                </value>
                <value>
                    <fullName>Etherios</fullName>
                </value>
                <value>
                    <fullName>Jaime Cangas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>Epics__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exists_in_Siebel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field designates if the functionality described in the User Story already exists in the current Siebel CRM system.</description>
        <inlineHelpText>This field designates if the functionality described in the User Story already exists in the current Siebel CRM system.</inlineHelpText>
        <label>Exists in Siebel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <label>Production Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gates_LOE__c</fullName>
        <label>Gates LOE</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Harris_Broadcast_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Must Have</fullName>
                </value>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Med</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
                <value>
                    <fullName>4 - Wishlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Want__c</fullName>
        <label>Test Scenario</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imagine_or_GatesAir__c</fullName>
        <label>Imagine or GatesAir</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ImagineCommunications</fullName>
                </value>
                <value>
                    <fullName>GatesAirCommunications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <label>Imagine LOE</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_One_Group__c</fullName>
        <label>Level One Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Management</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
                <value>
                    <fullName>Quote Management</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>User Interface</fullName>
                </value>
                <value>
                    <fullName>Service Management</fullName>
                </value>
                <value>
                    <fullName>Customer Community</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Sales Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_Two_Grouping__c</fullName>
        <label>Level Two Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Level_One_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Proposals</fullName>
                </value>
                <value>
                    <fullName>Solution Sets</fullName>
                </value>
                <value>
                    <fullName>Quote Line Items</fullName>
                </value>
                <value>
                    <fullName>Quote Discounting</fullName>
                </value>
                <value>
                    <fullName>Cloning</fullName>
                </value>
                <value>
                    <fullName>General Quoting</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>PriceBooks</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Addresses</fullName>
                </value>
                <value>
                    <fullName>RFP (TBD)</fullName>
                </value>
                <value>
                    <fullName>Opportunity Products</fullName>
                </value>
                <value>
                    <fullName>Layout Configuration</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Permissions</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Reports and Dashboards</fullName>
                </value>
                <value>
                    <fullName>Agreement Management</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                </value>
                <value>
                    <fullName>RMA Process</fullName>
                </value>
                <value>
                    <fullName>Case Management Process</fullName>
                </value>
                <value>
                    <fullName>Project Process</fullName>
                </value>
                <value>
                    <fullName>Record Creation</fullName>
                </value>
                <value>
                    <fullName>Account Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Eloqua Integration</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Level_Story_Details__c</fullName>
        <label>Low Level Story Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Month_to_be_fixed__c</fullName>
        <label>Month to be fixed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Or_Domain__c</fullName>
        <label>Object Or Domain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Related User Stories</relationshipLabel>
        <relationshipName>Related_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Type of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Production Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Week__c</fullName>
        <description>This field is to associate Pilot User Stories to the appropriate Pilot week.</description>
        <label>Pilot Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week 1</fullName>
                </value>
                <value>
                    <fullName>Week 2</fullName>
                </value>
                <value>
                    <fullName>Week 3</fullName>
                </value>
                <value>
                    <fullName>Week 4</fullName>
                </value>
                <value>
                    <fullName>Week 5</fullName>
                </value>
                <value>
                    <fullName>Week 6</fullName>
                </value>
                <value>
                    <fullName>Week 7</fullName>
                </value>
                <value>
                    <fullName>Week 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business user requesting the enhancement.</description>
        <label>Business Stakeholder 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business User requesting the enhancement.</description>
        <label>Business Stakeholder 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select a user responsible for QA</inlineHelpText>
        <label>QA/UAT Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Script_Written__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Script Written</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Script__c</fullName>
        <label>QA Script</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Status__c</fullName>
        <label>Pilot Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Retest</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Training Issue</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_UAT_Comments__c</fullName>
        <label>QA/UAT Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>if( ISPICKVAL( Phase__c, &quot;1&quot;), &quot;MAR&quot;, &quot;JUL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Business Stakeholders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel - Jaime Cangas</fullName>
                </value>
                <value>
                    <fullName>Channel - Kathy Bienz</fullName>
                </value>
                <value>
                    <fullName>Channel - Mark Jordan</fullName>
                </value>
                <value>
                    <fullName>Channel - Oliver Abadeer</fullName>
                </value>
                <value>
                    <fullName>IT - David Poling</fullName>
                </value>
                <value>
                    <fullName>IT - Lisa Cline</fullName>
                </value>
                <value>
                    <fullName>IT - Mark Cowles</fullName>
                </value>
                <value>
                    <fullName>IT - Ole Calderone</fullName>
                </value>
                <value>
                    <fullName>Marketing - Emily Etzborn</fullName>
                </value>
                <value>
                    <fullName>Marketing - Victoria Canton</fullName>
                </value>
                <value>
                    <fullName>Sales - Bill Betts</fullName>
                </value>
                <value>
                    <fullName>Sales - Chandra Dodani</fullName>
                </value>
                <value>
                    <fullName>Sales - Chantal Barbosa</fullName>
                </value>
                <value>
                    <fullName>Sales - Jeff Kurth</fullName>
                </value>
                <value>
                    <fullName>Sales - Lane Lobaugh</fullName>
                </value>
                <value>
                    <fullName>Sales - Lynn Heines</fullName>
                </value>
                <value>
                    <fullName>Sales - Rich Lohmueller</fullName>
                </value>
                <value>
                    <fullName>Service - Dawn Vance</fullName>
                </value>
                <value>
                    <fullName>Service - Greg Wainman</fullName>
                </value>
                <value>
                    <fullName>Service - Paul Nagle</fullName>
                </value>
                <value>
                    <fullName>Service - Simon Lockington</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Sales - Hamid Bahadori</fullName>
                </value>
                <value>
                    <fullName>Professional Services- Guillermo Velasco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPRINT_ACTIVITY_EPICS__c</fullName>
        <label>SPRINT ACTIVITY EPICS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration/ Customization / Development</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Data Migrations</fullName>
                </value>
                <value>
                    <fullName>Sprint QA</fullName>
                </value>
                <value>
                    <fullName>Sprint Demo</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPRINT_ACTIVITY_TOPICS__c</fullName>
        <label>SPRINT ACTIVITY TOPICS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts/Contacts/ Addresses</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Attachments/ Documents/ Files</fullName>
                </value>
                <value>
                    <fullName>Box.com</fullName>
                </value>
                <value>
                    <fullName>Bug Tracking</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>Customer Portal (Services)</fullName>
                </value>
                <value>
                    <fullName>Data Migration - Production</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Entitlements/ Service Contracts</fullName>
                </value>
                <value>
                    <fullName>Final UAT</fullName>
                </value>
                <value>
                    <fullName>FPX (Gates)</fullName>
                </value>
                <value>
                    <fullName>Integration - Production</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Knowledge Article Migration</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Micro UAT</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Other Remaining</fullName>
                </value>
                <value>
                    <fullName>Partner Community (Leads, Accounts, Contacts, Products, Pricing)</fullName>
                </value>
                <value>
                    <fullName>Partner Community (UI Changes including Landing page)</fullName>
                </value>
                <value>
                    <fullName>Partner Portal (Services)</fullName>
                </value>
                <value>
                    <fullName>Products/ Pricebooks</fullName>
                </value>
                <value>
                    <fullName>Professional Services - Projects</fullName>
                </value>
                <value>
                    <fullName>QA - End to End</fullName>
                </value>
                <value>
                    <fullName>Quotes</fullName>
                </value>
                <value>
                    <fullName>Quotes FPX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Seq Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>So_That__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#0B24BE</color>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#009900</color>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Planned for Next Release</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Validation / QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deferred for Future Release</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Deployed to Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Summary__c</fullName>
        <label>Story Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Custom Coding/Apex</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboards</fullName>
                </value>
                <value>
                    <fullName>Security (Profiles/ Roles and Sharing settings)</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>APS_December_2014_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Level_Two_Grouping__c</columns>
        <columns>Harris_Broadcast_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>As_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>So_That__c</columns>
        <columns>Pilot_Week__c</columns>
        <columns>QA_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LOE__c</columns>
        <columns>Burned__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>equals</operation>
            <value>Raj Damera</value>
        </filters>
        <filters>
            <field>Month_to_be_fixed__c</field>
            <operation>equals</operation>
            <value>Dec 2014</value>
        </filters>
        <filters>
            <field>Customization_Details__c</field>
            <operation>notEqual</operation>
            <value>Research</value>
        </filters>
        <label>APS December 2014 User Stories</label>
    </listViews>
    <listViews>
        <fullName>APS_Research_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Harris_Broadcast_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>As_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>So_That__c</columns>
        <columns>Pilot_Week__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LOE__c</columns>
        <columns>Burned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>equals</operation>
            <value>Raj Damera</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Closed,Deferred</value>
        </filters>
        <filters>
            <field>Customization_Details__c</field>
            <operation>equals</operation>
            <value>Research</value>
        </filters>
        <label>APS Research User Stories</label>
    </listViews>
    <listViews>
        <fullName>APS_SFDC_Pilot_Critical_Items</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Developer__c</columns>
        <columns>LOE__c</columns>
        <columns>Parent_User_Story__c</columns>
        <columns>Level_One_Group__c</columns>
        <columns>Level_Two_Grouping__c</columns>
        <columns>Phase__c</columns>
        <columns>Harris_Broadcast_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>QA_Status__c</columns>
        <columns>Exists_in_Siebel__c</columns>
        <columns>As_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>So_That__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Harris_Broadcast_Priority__c</field>
            <operation>equals</operation>
            <value>0 - Must Have</value>
        </filters>
        <filters>
            <field>Developer__c</field>
            <operation>equals</operation>
            <value>Raj Damera</value>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APS SFDC Pilot Critical Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>APS_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Level_Two_Grouping__c</columns>
        <columns>Harris_Broadcast_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>As_A__c</columns>
        <columns>I_Want__c</columns>
        <columns>So_That__c</columns>
        <columns>Pilot_Week__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LOE__c</columns>
        <columns>Burned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Developer__c</field>
            <operation>equals</operation>
            <value>Raj Damera</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Closed</value>
        </filters>
        <filters>
            <field>Customization_Details__c</field>
            <operation>notEqual</operation>
            <value>Research</value>
        </filters>
        <label>APS User Stories</label>
    </listViews>
</CustomObject>